--- a/render.yaml
+++ b/render.yaml
@@ -9,12 +9,16 @@ services:
     autoDeploy: false
     envVars:
       - key: token_cp
+        value:""
         sync: true
       - key: BOT_TOKEN
+        value:""
         sync: true
       - key: API_ID
+        value:""
         sync: false
       - key: API_HASH
+        value:""
         sync: false
       - key: PORT
         value: 8000  # Default port value, update if needed
