--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,24 @@
 async-lru==2.0.2
-cloudscraper
-python-telegram-bot==20.0
-PyPDF2
-reportlab
-beautifulsoup4==4.9.3
-pytube
-youtube-dl
-ffmpeg
-m3u8
-helper
 certifi==2023.5.7
-bs4==0.0.1
 charset-normalizer==3.1.0
 idna==3.4
 mutagen==1.46.0
 pyaes==1.6.1
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
 pycryptodome==3.18.0
-Pyrogram==2.0.106
-pyromod==1.5
+pyrofork
 PySocks==1.7.1
 python-dotenv==1.0.0
-requests==2.32.2
+requests==2.31.0
 soupsieve==2.4.1
 TgCrypto==1.2.5
 urllib3==2.0.3
-websockets==12.0
-yt-dlp==2024.7.25
+websockets==11.0.3
+yt-dlp==2025.02.19
 motor
-aiohttp==3.8.4
+aiohttp
 aiofiles
 pytz
+ffmpeg
 umongo==3.1.0
 speedtest-cli
 Flask==1.1.2
@@ -41,4 +26,14 @@ gunicorn==20.1.0
 Jinja2==3.0.3
 werkzeug==2.0.2
 itsdangerous==2.0.1
-
+ffmpeg
+youtube-dl
+cloudscraper
+pytube
+cryptography
+PyJWT
+sqlalchemy
+pyopenssl
+wget
+bs4
+beautifulsoup4
