--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,41 @@
-requests 
-pycryptodomex  
-aiofiles
+async-lru==2.0.2
+cloudscraper
+python-telegram-bot==20.0
+PyPDF2
+reportlab
+beautifulsoup4==4.9.3
+pytube
+youtube-dl
+ffmpeg
+m3u8
+helper
+certifi==2023.5.7
+bs4
+charset-normalizer==3.1.0
+idna==3.4
+mutagen==1.46.0
+pyaes==1.6.1
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+pycryptodomex
+pyrofork
+PySocks==1.7.1
+python-dotenv==1.0.0
+requests
+soupsieve==2.4.1
+TgCrypto==1.2.5
+urllib3==2.0.3
+websockets==12.0
+yt-dlp==2024.08.06
+motor
 aiohttp
 asyncio
-pyrofork
-TgCrypto==1.2.5
-cloudscraper
-bs4
-yt-dlp==2024.08.06
+aiofiles
+pytz
+umongo==3.1.0
+speedtest-cli
 Flask==1.1.2
 gunicorn==20.1.0
 Jinja2==3.0.3
