--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 async-lru==2.0.2
 cloudscraper
+python-telegram-bot==20.0
 PyPDF2
 reportlab
 beautifulsoup4==4.9.3
@@ -19,7 +20,7 @@ google-auth-oauthlib
 google-auth-httplib2
 google-api-python-client
 pycryptodome==3.18.0
-pyrofork
+Pyrofork
 PySocks==1.7.1
 python-dotenv==1.0.0
 requests==2.32.2
@@ -27,9 +28,9 @@ soupsieve==2.4.1
 TgCrypto==1.2.5
 urllib3==2.0.3
 websockets==12.0
-yt-dlp==2024.08.06
+yt-dlp==2024.7.25
 motor
-aiohttp
+aiohttp==3.8.4
 aiofiles
 pytz
 umongo==3.1.0
@@ -39,6 +40,3 @@ gunicorn==20.1.0
 Jinja2==3.0.3
 werkzeug==2.0.2
 itsdangerous==2.0.1
-pycryptodomex
-asyncio
-TgCrypto==1.2.5
